Backend/openshift/auth/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: ask-app
  labels:
    app: auth-service
spec:
  selector:
    app: auth-service
  ports:
    - name: http
      port: 8085
      targetPort: 8085
